--- a/.github/workflows/provision-s3-static-site.yaml
+++ b/.github/workflows/provision-s3-static-site.yaml
@@ -25,12 +25,12 @@ jobs:
           echo "Bucket Name: $BUCKET_NAME"
           echo "BUCKET_NAME=$BUCKET_NAME" >> $GITHUB_ENV
       
-      - name: Run Terraform
+            - name: Run Terraform
         run: |
-          cd Terraform
-          cd s3-static-website
+          cd terraform/s3-bucket-static
           terraform init
           terraform apply -auto-approve -var="bucket_name=${{ env.BUCKET_NAME }}"
+
           
       - name: Add comment
         run: gh issue comment "$NUMBER" --repo "$REPO" --body "$BODY"
