--- a/.github/workflows/provision-s3-static-site.yaml
+++ b/.github/workflows/provision-s3-static-site.yaml
@@ -19,28 +19,27 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: extract Bucket Name from issue
+      - name: Extract Bucket Name from issue
         run: |
-          export BUCKET_NAME=$(echo "${{ github.event.issue.body.title }}")
+          export BUCKET_NAME=$(echo "${{ github.event.issue.title }}" | tr '[:upper:]' '[:lower:]' | tr -d ' ')
           echo "Bucket Name: $BUCKET_NAME"
           echo "BUCKET_NAME=$BUCKET_NAME" >> $GITHUB_ENV
-          
+
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v2
+
       - name: Run Terraform
         run: |
           cd terraform/s3-bucket-static
           terraform init
           terraform apply -auto-approve -var="bucket_name=${{ env.BUCKET_NAME }}"
-  
-          
-      - name: Add comment
+
+      - name: Add comment to issue
         run: gh issue comment "$NUMBER" --repo "$REPO" --body "$BODY"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NUMBER: ${{ github.event.issue.number }}
           REPO: ${{ github.repository }}
           BODY: >
-            Your S3 Static Website has been created successfully!
-            You can access it at: http://${{ env.BUCKET_NAME }}.s3-website-us-east-1.amazonaws.com
-          
-
-    
+            ✅ Your S3 Static Website has been created successfully!
+            Access it at: http://${{ env.BUCKET_NAME }}.s3-website-us-east-1.amazonaws.com
