--- a/.github/workflows/provision-s3-static-site.yaml
+++ b/.github/workflows/provision-s3-static-site.yaml
@@ -1,45 +1,43 @@
-name: Create S3 Static Site
+name: Terraform Deploy
 
 on:
-  issues:
-    types: [opened]
+  push:
+    branches:
+      - main
+
+permissions:
+  contents: read      # Necessário para o checkout do código
+  issues: write       # Permite criar comentários em issues
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout do repositório
         uses: actions/checkout@v2
 
-      - name: Set up AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+      - name: Configurar Terraform
+        uses: hashicorp/setup-terraform@v3
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          terraform_version: 1.9.8
 
-      - name: Extract Bucket Name from issue
-        run: |
-          export BUCKET_NAME=$(echo "${{ github.event.issue.title }}" | tr '[:upper:]' '[:lower:]' | tr -d ' ')
-          echo "Bucket Name: $BUCKET_NAME"
-          echo "BUCKET_NAME=$BUCKET_NAME" >> $GITHUB_ENV
+      - name: Inicializar Terraform
+        run: terraform init
+        working-directory: terraform/s3-bucket-static
 
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v2
+      - name: Validar Terraform
+        run: terraform validate
+        working-directory: terraform/s3-bucket-static
 
-      - name: Run Terraform
-        run: |
-          cd terraform/s3-bucket-static
-          terraform init
-          terraform apply -auto-approve -var="bucket_name=${{ env.BUCKET_NAME }}"
+      - name: Aplicar Terraform
+        run: terraform apply -auto-approve
+        working-directory: terraform/s3-bucket-static
 
-      - name: Add comment to issue
-        run: gh issue comment "$NUMBER" --repo "$REPO" --body "$BODY"
+      - name: Comentar na issue
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NUMBER: ${{ github.event.issue.number }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPO: ${{ github.repository }}
-          BODY: >
-            ✅ Your S3 Static Website has been created successfully!
-            Access it at: http://${{ env.BUCKET_NAME }}.s3-website-us-east-1.amazonaws.com
+          NUMBER: ${{ github.event.issue.number }}
+          BODY: "✅ Deploy do Terraform finalizado com sucesso!"
+        run: gh issue comment "$NUMBER" --repo "$REPO" --body "$BODY"
